# GTestSample

./: CMakeLists.txt
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/framework_test/: framework_test.cpp
src/framework/: CMakeLists.txt
src/framework/inc/: foo.h
src/framework/src/: foo.cpp
